<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_height="wrap_content"
                  android:maxHeight="10dp"
                  android:orientation="horizontal"
                  android:layout_width="fill_parent"
                  android:background="@color/background_dark">
        <TextView android:layout_height="wrap_content"
                  android:id="@+id/view_app_name"
                  android:text="@string/app_name"
                  android:gravity="left"
                  android:layout_gravity="left"
                  android:layout_width="0dp"
                  android:layout_weight="1">
        </TextView>
        <TextView android:id="@+id/view_description"
                  android:layout_height="wrap_content"
                  android:text="@string/view_txt"
                  android:enabled="true"
                  android:gravity="center"
                  android:layout_width="0dp"
                  android:layout_weight="1">
        </TextView>
        <TextView android:layout_height="wrap_content"
                  android:text="@string/database_name"
                  android:gravity="right"
                  android:id="@+id/db_name"
                  android:layout_gravity="right"
                  android:layout_width="0dp"
                  android:layout_weight="1">
        </TextView>
    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_height="wrap_content"
                  android:maxHeight="10dp"
                  android:orientation="horizontal"
                  android:visibility="gone"
                  android:layout_width="fill_parent"
                  android:background="@color/background_dark">
        <TextView android:layout_height="wrap_content"
                  android:id="@+id/view_sort1"
                  android:text="@string/app_name"
                  android:gravity="left"
                  android:layout_gravity="left"
                  android:layout_width="0dp"
                  android:layout_weight="1">
        </TextView>
        <TextView android:id="@+id/view_sort2"
                  android:layout_height="wrap_content"
                  android:text="@string/view_txt"
                  android:enabled="true"
                  android:gravity="center"
                  android:layout_width="0dp"
                  android:layout_weight="1">
        </TextView>
        <TextView android:layout_height="wrap_content"
                  android:text="@string/database_name"
                  android:gravity="right"
                  android:id="@+id/view_sort3"
                  android:layout_gravity="right"
                  android:layout_width="0dp"
                  android:layout_weight="1">
        </TextView>
        <TextView android:layout_height="wrap_content"
                  android:text="@string/database_name"
                  android:gravity="right"
                  android:id="@+id/view_sort4"
                  android:layout_gravity="right"
                  android:layout_width="0dp"
                  android:layout_weight="1">
        </TextView>
        <TextView android:layout_height="wrap_content"
                  android:text="@string/database_name"
                  android:gravity="right"
                  android:id="@+id/view_view"
                  android:layout_gravity="right"
                  android:layout_width="0dp"
                  android:layout_weight="1">
        </TextView>
    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_height="50dp"
                  android:layout_width="fill_parent"
                  android:maxHeight="50dp"
                  android:orientation="horizontal">
        <Spinner android:id="@+id/cat_spinner"
                 android:layout_height="wrap_content"
                 android:layout_weight="2"
                 android:layout_width="150dp"
                 android:prompt="@string/cat_prompt"/>
        <Spinner android:id="@+id/store_spinner"
                 android:layout_height="wrap_content"
                 android:layout_width="150dp"
                 android:layout_weight="2"
                 android:prompt="@string/store_prompt"/>
    </LinearLayout>
    <include android:id="@+id/compactHeaderLayout" layout="@layout/itemrowheader1"/>
    <include android:id="@+id/dateHeaderLayout" layout="@layout/itemrowdateheader1"/>
    <include android:id="@+id/allHeaderLayout" layout="@layout/itemrowall1" />
    <include android:id="@+id/prioHeaderLayout" layout="@layout/itemprioheader" />

    <EditText android:gravity="top"
              android:layout_width="fill_parent"
              android:layout_height="50dp"
              android:hint="Item to search for"
              android:visibility="gone"
              android:inputType="textNoSuggestions|textVisiblePassword"
              android:id="@+id/search_edit">
        <requestFocus>
        </requestFocus>
    </EditText>
    <View
        android:layout_height="2dip"
        android:layout_width="fill_parent"
        android:background="#FF909090" />

    <LinearLayout android:id="@+id/RelativeLayout01"
                  android:orientation="vertical"
                  android:layout_width="fill_parent"
                  android:layout_height="fill_parent">

        <ListView android:id="@android:id/list"
                  android:layout_alignParentTop="true"
                  android:fastScrollEnabled="true"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_weight="1.0">
        </ListView>
        <Button android:id="@+id/blankList"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:text="Click to add new item"
                  android:clickable="true"
                  android:onClick="addClick"
                  android:visibility="gone"
                  ></Button>
        <RelativeLayout android:id="@+id/pricecount"
                      android:orientation="horizontal"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content">
            <LinearLayout android:id="@+id/priceLL"
                          android:orientation="horizontal"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content">
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="Price: "/>
                <TextView android:id="@+id/sumPrice"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="xx"/>
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="/"/>
                <TextView android:id="@+id/remainPrice"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="xx"/>
            </LinearLayout>
            <LinearLayout android:id="@+id/countLL"
                          android:orientation="horizontal"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_toRightOf="@+id/priceLL"  >
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="Items: "/>
                <TextView android:id="@+id/inCart"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="xx "/>
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="/"/>
                <TextView android:id="@+id/itemsMissing"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="xx "/>
            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>
    <TextView android:id="@android:id/empty"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/no_items"/>
</LinearLayout>
